# markirovka-digest

./: .dockerignore  .env.example  .gitignore  CONTEXT.md  Dockerfile  README.md  analyzer.py  channels.toml  config.py  db.py  downloader.py  main.py  models.py  publisher.py  pyproject.toml  railway.json  requirements.txt  window.py
.briefs/: telegram-daily-digest.md
.claude/teams/feature-telegram-digest/: DECISIONS.md  state.md
.conventions/anti-patterns/: avoid-hardcoded-secrets.md  avoid-mutable-state.md
.conventions/checks/: file-size.md  naming.md
.conventions/gold-standards/: async-api-client.py  config-validation.py  db-operations.py  frozen-dataclass.py
.github/workflows/: digest.yml
docs/adr/: 0001-read-only-consumer-of-scraper-db.md
docs/plans/: 2026-03-19-telegram-digest-design.md
prompts/: digest.md
scripts/: generate_session.py
tests/: conftest.py  test_analyzer.py  test_config.py  test_db.py  test_pipeline.py  test_prompt.py  test_publisher.py  test_window.py
