[project]
name = "markirovka-digest"
version = "0.1.0"
description = "Automated daily digest from Telegram chats about product labeling (markirovka)"
requires-python = ">=3.12"
dependencies = [
    "telethon>=1.36",
    "anthropic>=0.40",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
